--- a/docs/mwa_csl_guide/mwa_csl_guide.tex
+++ b/docs/mwa_csl_guide/mwa_csl_guide.tex
@@ -3,5 +3,14 @@
 \begin{document}
 \maketitle
 Hallo!
+\section{Stern 1}
+\subsection{Stern 1.1}
+\subsection{Stern 1.2}
+\subsubsection{Stern 1.2.1}
+\subsection{Stern 1.3}
+\section{Stern 2}
+\subsubsection{Stern 2.0.1}
+\subsection{Stern 2.1}
+\subsubsection{Stern 2.1.1}
 \end{document}
 
