javascript .join is amazing

--- a/docs/mwa_csl_guide/mwa_csl_guide.tex
+++ b/docs/mwa_csl_guide/mwa_csl_guide.tex
@@ -3,6 +3,7 @@
 \begin{document}
 \maketitle
 Hallo!
+\subsubsection{Stern 0.0.1}
 \section{Stern 1}
 \subsection{Stern 1.1}
 \subsection{Stern 1.2}
