ahh ok, so --number-sections exists...

--- a/docs/mwa_csl_guide/mwa_csl_guide.tex
+++ b/docs/mwa_csl_guide/mwa_csl_guide.tex
@@ -1,10 +1,21 @@
 \documentclass{article}
+% includes
+\usepackage{graphicx}
+\usepackage{geometry}
+% formatting
+\geometry{a4paper}
+\newcommand{\msize}{2.5cm}
+\geometry{left=\msize, right=\msize, top=\msize, bottom=\msize}
+\frenchspacing
 \title{Yoyoyo!}
+% commands
+% document
 \begin{document}
 \maketitle
 Hallo!
 \subsubsection{Stern 0.0.1}
 \section{Stern 1}
+Das ist ein Satz. Doch Mr. Punkt soll nicht abgek\"urzt.
 \subsection{Stern 1.1}
 \subsection{Stern 1.2}
 \subsubsection{Stern 1.2.1}
