added mathjax support for html

--- a/docs/mwa_csl_guide/mwa_csl_guide.tex
+++ b/docs/mwa_csl_guide/mwa_csl_guide.tex
@@ -4,6 +4,8 @@
 \usepackage{geometry}
 \usepackage{xcolor}
 \usepackage{fancyhdr}
+\usepackage{amsmath}
+\usepackage{amssymb}
 % --- FORMATTING ---
 % info
 \newcommand{\mytitle}{How To Zotero: Gardner/Springfeld-CSL}
@@ -62,8 +64,11 @@
 }
 Im folgenden Text gibt es ein \htmlonly{verstecktes} Gespenst.
 \\
-Aber das Geheimnis ``\pdfonly{hihihi}'' soll nur das PDF kennen. JFK
-\\
+Aber das Geheimnis ``\pdfonly{hihihi}'' soll nur das PDF kennen. JFK testet Mathe:
+\[
+	\sum_{i=1}^n=\frac{n(n+1)}{2},
+\]
+f\"ur \(n\in\mathbb{N}\).
 420\htmlonly{69}
 \pdfonly{pdfonly}\htmlonly{htmlonly}
 \pagestyle{fancy}
