add link to project page, fix footnote (it's not unselbstständig!)

--- a/docs/mwa_csl_guide/src/einleitung.tex
+++ b/docs/mwa_csl_guide/src/einleitung.tex
@@ -1,13 +1,21 @@
 \section{Einleitung}
 \subsection{Hinweise zu diesem Dokument}
 \subsubsection*{Zur Form}
-Dieses Dokument liegt in einer hybriden Form vor. \TODO{links}
+Dieses Dokument liegt in einer hybriden Form vor und wird laufend aktualisiert.
+Die Online-Version dieses Textes kann
+\href{https://www.digimuwi.uni-tuebingen.de/start/projects/008-mwacsl.html}{hier} 
+abgerufen werden.
+
 \subsubsection*{Zur Sprachverwendung}
 In diesem Dokument wird das \href{https://de.wikipedia.org/wiki/Generisches_Maskulinum}{\textit{generische Maskulinum}} verwendet, um alle Geschlechter anzusprechen.
 Begriffe wie "`Autor"' oder "`Herausgeber"' sind damit als geschlechterneutral zu verstehen.
-Die hier gew\"ahlte Form wird in Anlehnung an die aktuellste deutschsprachige Zotero-Version und den zugrunde liegenden Text\footnote{Matthew Gardner und Sara Springfeld, \guillemotright Leitfaden f\"ur bibliografische Angaben\guillemotleft, in: \textit{Musikwissenschaftlichen Arbeiten. Eine Einf\"uhrung}, Kassel 2014.} der Gardner/Springfeld-CSL verwendet.
+Die hier gew\"ahlte Form wird in Anlehnung an die aktuellste deutschsprachige
+Zotero-Version und den der Gardner/Springfeld-CSL zugrunde liegenden
+Text\footnote{Matthew Gardner und Sara Springfeld, \textit{Musikwissenschaftlichen Arbeiten.
+Eine Einf\"uhrung}, Kassel 2014 (B\"arenreiter Studienb\"ucher Musik, 19), S. 262-284.} verwendet.
 
 Diese Entscheidung ist nicht als wertend zu deuten (f\"ur Interessierte liefert Philipp H\"ubl eine umfassende Diskussion zum Thema in seiner Vorlesung \href{https://www.youtube.com/watch?v=yvMGFeQ1gsI}{\textit{Bullshit-Resistenz}}).
+
 \subsubsection*{Ein Wegweiser}
 Besonders empfiehlt sich das Lesen des Kapitels \hyperref{haeufige_probleme}{H\"aufige Probleme}.
 Eine relativ knappe \"ubersicht des 
