--- a/docs/mwa_csl_guide/src/der_gardner_springfeld_standard.tex
+++ b/docs/mwa_csl_guide/src/der_gardner_springfeld_standard.tex
@@ -1,8 +1,171 @@
-\section{Der Gardner/Springfeld-Standard}
-\subsection{Allgemeine Regeln}
+\section{Einzelhinweise zu verschiedenen Publikationsformen}
+Der folgende Abschnitt folgt im Wesentlichen der Struktur des Leitfadens 
+von Gardner und Springfeld\footnote{Matthew Gardner und
+Sara Springfeld, \emph{Musikwissenschaftlichen Arbeiten. Eine Einf\"uhrung},
+Kassel 2014 (B\"arenreiter Studienb\"ucher Musik, 19), S.262f.} und gibt
+jeweils zu den einzelnen Publikationsformen Hinweise zur zielführenden Eingabe in Zotero.
 
-\subsection{Selbstst\"andige Publikationen}
-\subsection{Unselbstst\"andige Publikationen: Aufs\"atze, Artikel, kleinere Beitr\"age}
-\subsection{Internetinhalte}
-\subsection{Noten}
-\subsection{Aufnahmen}
+\subsection{B\"ucher}
+
+W\"ahlen Sie als Eintragsart \textbf{Buch} aus.
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung} \\
+\midrule
+\textbf{Autor} & Vor- und Nachname sollten getrennt eingegeben werden.\\
+ & Mit dem \texttt{+}-Knopf rechts k\"onnen Sie mehrere Autoren angeben. \\
+\textbf{Titel} & Achten Sie darauf, Titel und Untertitel mit einem Punkt zu trennen und\\
+ & englische Titel im Title Case anzugeben. Sie k\"onnen unter dem \texttt{...}-Knopf\\
+ & Titel automatisch in Title Case umformen.\\
+\textbf{Ort} & \\
+\textbf{Datum} & Tragen Sie hier das Jahr ein.\\
+\textbf{Auflage} & Geben Sie hier lediglich eine Zahl ein, so wird diese als\\
+ & hochgestellte Zahl vor dem Jahr ausgegeben. Bei weiteren\\
+ & Informationen (z.\,B.\,\guillemotright zweite und verbesserte Auflage\guillemotleft) werden\\
+ & diese als eigenst\"andiger Text ausgegeben. \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\subsection{B\"ucher in gez\"ahlten Reihen}
+
+Um eine gez\"ahlte Reihe anzugeben, nutzen Sie die Felder \textbf{Reihe} und \textbf{Nummer der Reihe}. 
+Die Reihe wird nur dann ausgegeben, wenn beide Felder gesetzt wurden.
+
+\subsection{Unver\"offentlichte oder online publizierte Hochschulschriften}
+
+\noindent
+\textbf{Eintragsart: Dissertation}
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung} \\
+\midrule
+\textbf{Art} & Hier k\"onnen Sie z.\,B.\ \guillemotright Diss\guillemotleft oder \guillemotright Masterarbeit\guillemotleft angeben.\\
+\textbf{Universit\"at} & Geben Sie hier die Hochschule oder Universit\"at ein, bei der Arbeit\\
+ & eingereicht wurde. \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\subsection{Reprints}
+
+Reprints lassen sich momentan in Zotero nicht vollst\"andig abbilden. Als Workaround k\"onnen Sie das Feld \emph{Auflage} nutzen, um Informationen zum Reprint einzugeben, z.\,B.\ 
+\emph{\guillemotright Faksimile-Nachdruck unter dem Titel Musikalisches Lexikon\guillemotleft}.
+
+\vspace{1.5em}
+
+\section{Unselbstst\"andige Publikationen}
+
+\subsection{Lexikonartikel}
+
+W\"ahlen Sie als Eintragsart \textbf{Enzyklop\"adieartikel}.
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung}\\
+\midrule
+\textbf{Titel} & Geben Sie hier den Titel des Artikels an \dots \\
+\textbf{Titel der Enzyklop\"adie} & \dots und hier den Titel des Lexikons bzw. der Enzyklop\"adie.\\
+\textbf{Autor und Herausgeber} & Direkt unter dem Titel k\"onnen Sie den Namen des Autors angeben.\\
+ & Um den Herausgeber anzugeben, klicken Sie auf den \texttt{+}-Knopf rechts.\\
+ & Nun sollte ein weiteres Feld \guillemotright Herausgeber\guillemotleft erscheinen.\\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\subsubsection{Hinweise zu speziellen Lexika}
+
+\paragraph{MGG2}
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung}\\
+\midrule
+\textbf{Auflage} & \guillemotright 2., neubearbeitete Ausgabe\guillemotleft\\
+\textbf{Band} & Tragen Sie hier auch den Teil der MGG ein, also z.\,B.\ \guillemotright Sachteil, Bd.\,5\guillemotleft.\\
+\textbf{Seiten} & Geben Sie hier die Spaltenzahlen mit dem Zusatz \guillemotright Sp.\guillemotleft ein. Zotero erkennt,\\
+ & dass es sich um eine nicht-numerische Seitenzahl handelt und wird den\\
+ & ansonsten automatischen Zusatz \guillemotright S. [...]\guillemotleft weglassen.\\
+\bottomrule
+\end{tabular}
+\end{center}
+
+Achten Sie darauf, dass Sie auch beim Zitieren Spalten- und nicht Seitenzahlen angeben.
+Den entsprechenden \textit{Locator} können Sie im Zitierdialog auswählen, indem sie 
+links neben dem Eingabefeld für die Seitenzahl auf \guillemotright Seite\guillemotleft
+klicken. Nun öffnet sich eine Liste, aus der Sie \guillemotright Spalte\guillemotleft 
+auswählen können.
+
+\paragraph{NG2}
+
+Bei \textbf{Auflage}: \guillemotright 2., neubearbeitete Ausgabe\guillemotleft eintragen.
+
+\paragraph{Artikel in Onlinelexika (GMO)}
+
+Lassen Sie die Felder \textbf{Ort} und \textbf{Datum} leer und nutzen Sie stattdessen:  
+\textbf{Titel}, \textbf{Autor}, \textbf{Titel der Enzyklop\"adie}, \textbf{URL} und \textbf{Heruntergeladen am}.
+
+\subsection{Aufs\"atze in Sammelpublikationen}
+
+Nutzen Sie \textbf{Buchteil} als Eintragsart.
+
+\subsection{Aufs\"atze in Kongressberichten}
+
+Nutzen Sie \textbf{Konferenzpaper} als Eintragsart. Informationen zu Titel und Ort des Kongresses nehmen in den Titel des Konferenzbandes auf, \emph{nicht} in die separat daf\"ur vorgesehenen Felder.
+
+\subsection{Aufs\"atze in Festschriften}
+
+Nutzen Sie die normale Form (s.~o.\ \guillemotright Aufs\"atze in Sammelpublikationen\guillemotleft).
+
+\subsection{Aufs\"atze in wissenschaftlichen Zeitschriften oder Jahrb\"uchern}
+
+Nutzen Sie \textbf{Zeitschriftenartikel} als Eintragsart.
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung}\\
+\midrule
+\textbf{Publikation} & Hier tragen Sie den Namen der Zeitschrift ein \dots\\
+\textbf{Band} & \dots hier den Jahrgang ein.\\
+\textbf{Ausgabe} & \dots und hier das Heft.\\
+\textbf{Zeitschriftenabk\"urzung} & Es ist bei bekannten und oft zitierten Zeitschriften sinnvoll, dieses Feld zu setzen.\\
+ & Eine \"Ubersicht \"uber gel\"aufige Abk\"urzungen finden Sie im ersten Band der MGG2.\\
+\textbf{DOI} & Bei Onlinezeitschriften sollten Sie hier die DOI des Aufsatzes eintragen,\\
+ & also z.\,B.\ \texttt{10.31751/1188}. Beim Zitieren wird automatisch ein\\
+ & vollst\"andiger Link erg\"anzt.\\
+\textbf{URL} & Sofern eine DOI gesetzt ist, wird dieses Feld beim Zitieren ignoriert.\\
+ & Es ist nur relevant, wenn keine DOI verkn\"upft ist.\\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\subsection{Artikel in Zeitungen oder Magazinen}
+
+Eintragsart: \textbf{Zeitungsartikel} (Achtung, nicht Zeitschriftenartikel).
+
+\begin{center}
+\begin{tabular}{ll}
+\toprule
+\textbf{Feld} & \textbf{Anmerkung}\\
+\midrule
+\textbf{Publikation} & Name der Zeitung\\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\subsection{Dokumente in Briefausgaben oder Dokumentensammlungen}
+
+Nehmen Sie hier nur die Briefausgabe oder Dokumentensammlung selbst in Zotero auf (als Buch). 
+Beim Zitieren geben Sie \emph{manuell} die Angaben zum entsprechenden Dokument an und nutzen Zotero 
+lediglich f\"ur den zweiten Teil der Angabe, z.\,B.
+\begin{verbatim}
+Brief von Unger an Graf Esterhazy, Wien, 20. August 1820,
+zitiert nach: [an dieser Stelle die Briefausgabe mit Zotero einfügen].
+\end{verbatim}
