--- a/docs/mwa_csl_guide/mwa_csl_guide.tex
+++ b/docs/mwa_csl_guide/mwa_csl_guide.tex
@@ -9,6 +9,8 @@
 \usepackage{amssymb}
 \usepackage{hyperref}
 \usepackage[T1]{fontenc}
+\usepackage{booktabs}
+\usepackage{longtable}
 % --- FORMATTING ---
 % page formatting
 \geometry{a4paper}
