add some examples

--- a/docs/mwa_csl_guide/src/guide.tex
+++ b/docs/mwa_csl_guide/src/guide.tex
@@ -14,12 +14,48 @@ Navigieren Sie dort zu der gerade runtergeladenen \texttt{.csl}-Datei und \"offn
 \inclc{0.6}{res/zitieren_plus.png}
 Das sollte den Zitierstil unter dem Namen "`Musikwissenschaftliches Arbeiten Gardner/Springfeld"' installiert haben (sind bereits einige Zitierstile vorhanden, m\"ussen Sie ggf. etwas in der \"Ubersicht herunterscrollen).
 \newpage
-\subsection{Wie lege ich eine neue Literatur an?}
-Um einen eine Literatur einzutragen, finden Sie zuer
-\subsubsection{Wie erkenne ich, um welche Publikationsform es sich handelt?}
-\subsubsection{Wie erstelle ich einen neuen Eintrag?}
-\subsubsection{Wie kann ich Literatur automatisch importieren?}
-Es ist wichtig jede automatische Publikation anhand 
-\subsubsection{H\"aufige Probleme}\label{haeufige_probleme}
-\subsection{Wie binde ich ein Zitat extern ein?}
 
+\subsection{Wie lege ich eine neue Literatur an?}
+Es gibt zwei Arten, einen neuen Eintrag anzulegen: Manuell oder über die 
+automatische Importfunktion. In jedem Fall ist es wichtig, dass Sie
+die Felder korrekt befüllen, um einen korrekten Nachweis zu erhalten. Hinweise 
+dazu finden Sie im folgenden Abschnitt.
+
+\subsubsection{Wie erstelle ich einen neuen Eintrag manuell?}
+Nutzen Sie dazu den +-Button in der oberen linken Ecke. Bevor Sie die 
+Felder mit Informationen füllen, sollten Sie unbedingt die richtige 
+Eintragsart auswählen, da die Felder, die Ihnen zur Verfügung stehen, 
+je nach Eintragsart variieren.
+
+\subsubsection{Wie kann ich Literatur automatisch importieren?}
+Schneller als das manuelle Anlegen von Literatur ist der automatische Import. 
+Am bequemsten funktioniert dies, in dem Sie in Ihrem Browser ein sogenanntes 
+\textit{Connector}-Plugin installieren.
+
+\paragraph{Beispiele}
+Haben Sie beispielsweise auf \textbf{JSTOR} einen interessanten Aufsatz gefunden,
+können Sie mit einem Klick auf das Zoterosymbol einen Zotero-Eintrag 
+erstellen, der alle wichtigen Informationen und sogar das Volltext-PDF
+bereits enthält.
+
+% hier Screenshot einfügen
+Die gleiche Vorgehensweise wird auch für \textbf{RILM} empfohlen. 
+
+In der \textbf{MGG Online} empfiehlt es sich, zunächst auf den Button "Zitieren" 
+zu klicken und dann als Zitierstil RIS auszuwählen. Anschließend laden Sie diese 
+Datei herunter und importieren sie in Zotero.
+
+\subsubsection{H\"aufige Probleme}\label{haeufige_probleme}
+Fast immer müssen Daten, die Sie automatisch importiert haben, nachbereitet werden. 
+Häufige Probleme sind:
+
+\begin{itemize}
+    \item \textbf{Falsche Publikationsform}
+    \item \textbf{Abweichende Trennung von Titel und Untertitel}. Nach Gardner/Springfeld soll hier ein Punkt stehen. Beim Import 
+    insbesondere aus OPAC-Katalogen werden Sie hier häufig einen von Leerzeichen umgebenen Doppelpunkt vorfinden.    
+    \item \textbf{Kein Title Case}. Englischsprachige Publikationen sollten im Title Case nachgewiesen werden. Sie können 
+    das Feld Sprache auf den Wert "en" setzen. Damit wird der Titel beim Zitieren automatisch in Title Case umgewandelt.    
+\end{itemize}
+
+\subsection{Wie binde ich ein Zitat extern ein?}
+\dots
